5.14.2openmpi
	- fixed assertion error occurred when MPI_Initialized is the very first
	  event to be recorded
	- fixed potential stack underflow when tracing only MPI events of a
	  multithreaded program

5.14.1openmpi
	- updated version of internal OTF to 1.12.2openmpi
	  (see extlib/otf/ChangeLog)
	- added support for recording concurrent CUDA kernels with CUPTI (CUDA 5.0)
	- append "/vampirtrace" to DATADIR, if configuring inside Open MPI and
	  DATADIR doesn't points to the default (=DATAROOTDIR)
	  (prevents conflicts with the libtool RPM)
	- fixed build issues when using the IBM XL compiler on AIX
	- fixed build issues with Dyninst 8
	- revised memory allocation tracing:
		- intercept memory (de)allocation functions by library wrapping
		  (replaces deprecated hook technique from the GNU C library)
		- added support for multi-threaded applications
	- changed default function group name for
		- memory (de)allocation functions     : "MEM"  -> "LIBC-MALLOC"
		- I/O functions                       : "I/O"  -> "LIBC-I/O"
		- child process execution (e.g. execl): "LIBC" -> "LIBC-EXEC"
	- compiler wrappers:
		- removed invocation of pdbcomment; it removes essential
		  information from the PDB file for instrumenting functions

5.14openmpi
	- updated version of internal OTF to 1.12.1openmpi
	  (see extlib/otf/ChangeLog)
	- added support for filtering functions of specific call paths
	- introduced new environment variable VT_MPI_IGNORE_FILTER to
	  enable/disable recording of MPI communication events although its
	  corresponding functions are filtered
	- fixed undefined reference error for vt_get_mpi_f_in_place___ when
	  linking the Fortran MPI wrapper library (libvt-fmpi) built for
	  SGI-MPT (--with-sgimpt)
	- compiler wrappers:
		- added option '-vt:inst-exclude-file[-list]' to exclude source
		  files from the automatic instrumentation by the compiler or
		  PDT/TAU
		- added option '-vt:opari-exclude-file[-list]' to exclude source